# Mobile-App

./: build.gradle.kts  keystore.properties  settings.gradle.kts
app/: CMakeLists.txt  build.gradle.kts  google-services.json  kosjenka-release-key.jks
app/src/main/: AndroidManifest.xml
app/src/main/assets/trackerdata/: 688-707-889-891-372-853-605-322-596-149-229.vlc  Face Detector.cfg  Facial Features Tracker - With Ears.cfg  Facial Features Tracker.cfg  Head Tracker.cfg
app/src/main/jni/: AndroidCameraCapture.cpp  AndroidCameraCapture.h  AndroidCapture.cpp  AndroidCapture.h  AndroidImageCapture.cpp  AndroidImageCapture.h  AndroidStreamCapture.cpp  AndroidStreamCapture.h  AndroidWrapper.cpp  LicenseString.h  LivenessGUI.cpp  LivenessGUI.h  VisageRendering.cpp  VisageRendering.h
app/src/main/res/drawable/: add_profile_btn_view.xml  baseline_switch_account_24.xml  center_focus_strong.xml  edit_text_border.xml  ic_close.xml  ic_pause.xml  layout_bg_radius.xml  main_logo.xml  outline_add_box_24.xml  progress_bar_blue.xml  round_secondary_8.xml  timer_circle.xml
app/src/main/res/drawable-night/: baseline_switch_account_24.xml  center_focus_strong.xml  center_focus_weak.xml  ic_empty.xml  main_logo.xml
app/src/main/res/layout/: activity_camera.xml  activity_main.xml  alert_add_profile.xml  bottom_sheet_filter.xml  card_exercise.xml  custom_empty_list.xml  footer_paging.xml  fragment_calibrate.xml  fragment_camera.xml  fragment_exercise.xml  fragment_forgot_password.xml  fragment_home.xml  fragment_login.xml  fragment_main.xml  fragment_register.xml  fragment_reset_password.xml  fragment_timer_1.xml  fragment_user_profiles.xml  item_chip_filter.xml  item_exercise.xml  log_reg_toolbar.xml  user_profile_list_item.xml
app/src/main/res/menu/: profiles_fragment_menu.xml
(+145 files in other folders)
